Major changes to photo processing + Photo entity Changed Date to be java.util.Date in all entities of EDU Almost final mechanism of "Add Homework" + Files attached Almost final visualization of HW for weeks(in Homework Window) Changes to EDU DAOs

--- a/src/main/webapp/edu_resources.html
+++ b/src/main/webapp/edu_resources.html
@@ -102,93 +102,108 @@
     </section> 
          
 
- 
-      
 
+    <section class="blocks container-fluid" id="resources">
+        <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-xs-12 col-lg-6 col-lg-offset-3 padd">
+            <div class="redditstyle">
+                    <div class="dropdown">
+                      <button class="dropdown-toggle" type="button" data-toggle="dropdown">level
+                      <span class="caret"></span></button>
 
-        <section class="blocks container-fluid" id="resources">
-            <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-xs-12 col-lg-6 col-lg-offset-3 padd">
-                <div>
-                    <a class="btn btn-primary btn-lg btn-block accord" id="accord1" data-toggle="collapse" href="#levelfirst" role="button" aria-expanded="true">Level 1</a>
-                </div>
-                <div class="collapse buttoncol" id="levelfirst">
-                    <a class="btn btn-primary btn-lg btn-block" id="accord1" href="#history" role="button" data-toggle="modal" data-target="#exampleModalLong">History</a>
-                    <!-- Modal -->
-                    <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
-                        <div class="modal-dialog" role="document">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="exampleModalLongTitle">H/w</h5>
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-        </button>
-                                </div>
+                          <ul class="dropdown-menu nav nav-tabs">
+                            <li class="active"><a  data-toggle="tab" href="#levelfirst">Level 1</a></li>
+                            <li class=""><a data-toggle="tab" href="#levelsecond">Level 2</a></li>
+                            <li class=""><a data-toggle="tab" href="#">Level 3</a></li>
+                          </ul>
+
+                    </div>
+                <button class="">favourite</button>
+            </div>
+
+            <div class="tab-content" >
+                    <div class="collapse in buttoncol fade tab-pane active in" id="levelfirst">
+                        <a class="btn btn-primary btn-lg btn-block accord1" href="#history" role="button" data-toggle="modal" data-target="#exampleModalLong">History</a>
+                        <!-- Modal -->
+                        <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h3 class="modal-title" id="exampleModalLongTitle">Resources</h3>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            </button>
+                                    </div>
                                 <div class="modal-body">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex provident quos consectetur deserunt, veritatis temporibus blanditiis! Ipsum impedit adipisci corporis ut, fugiat cum magni tempora commodi eveniet, sed excepturi ratione cupiditate quos distinctio in harum a. At saepe nesciunt voluptate tempora harum ipsum assumenda optio eveniet, laboriosam consequuntur vitae fugit obcaecati nihil id temporibus soluta, facilis repellat necessitatibus molestiae. Modi aliquam repudiandae magnam, veritatis corporis unde? Id tempore saepe neque atque minima corrupti obcaecati eius ipsa quaerat voluptate reprehenderit voluptates omnis assumenda cum deserunt, sapiente, voluptatem accusantium quo ipsam odit numquam sit, nulla molestiae fuga. Numquam aperiam ea deserunt! Ea autem incidunt debitis culpa corporis voluptatem aspernatur totam consectetur voluptatibus odit molestias ab ad, officiis ipsa numquam id aliquid eos et magni commodi laboriosam vitae! Quaerat quae at, debitis odio cum? Ad nulla maiores amet consequuntur alias nihil reprehenderit est possimus, sapiente ratione facere odio rem quaerat autem impedit excepturi corporis. Error labore quisquam assumenda, et sapiente eos hic omnis culpa nulla placeat repudiandae ea consectetur quod dolorem alias dolores laborum tempora numquam magni itaque, veritatis, ipsum unde veniam quibusdam. Corrupti eos libero excepturi quia rem iure veniam odio dolore odit, cumque, sapiente ut, repellat placeat. Sapiente laboriosam sunt magni.
+                                    <div class="uploaded-files-hw">
+                                        <a href="#"><i class="far fa-file-word fa-4x"></i>
+                                        <span class="about-hw-file">Title: Человек и Общество.
+                                        <br>Size: 1Mb<br>Uploaded: 20 марта 2018 21:09 </span>
+                                        <span class="filefav"><i class="far fa-star"></i></span>
+                                    </a>
+                                    </div>
+                                    <div class="uploaded-files-hw">
+                                        <a href="#"><i class="far fa-file-word fa-4x"></i>
+                                        <span class="about-hw-file">Title: Человек и Общество.
+                                        <br>Size: 1Mb<br>Uploaded: 20 марта 2018 21:09 </span></a>
+                                    </div>
+                                    <div class="uploaded-files-hw">
+                                        <a href="#"><i class="far fa-file-word fa-4x"></i>
+                                        <span class="about-hw-file">Title: Человек и Общество.
+                                        <br>Size: 1Mb<br>Uploaded: 20 марта 2018 21:09 </span></a>
+                                    </div>
+                                    <div class="uploaded-files-hw">
+                                        <a href="#"><i class="far fa-file-word fa-4x"></i>
+                                        <span class="about-hw-file">Title: Человек и Общество.
+                                        <br>Size: 1Mb<br>Uploaded: 20 марта 2018 21:09 </span></a>
+                                    </div>
+
                                 </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                    <button type="button" class="btn btn-primary">Save changes</button>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                        <button type="button" class="btn btn-primary">Save changes</button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
+                        <a class="btn btn-primary btn-lg btn-block accord1"  href="#english" role="button">English</a>
+                        <a class="btn btn-primary btn-lg btn-block accord1"  href="#maths" role="button">Algebra</a>
+                        <a class="btn btn-primary btn-lg btn-block accord1"  href="#maths" role="button">Geometry</a>
+                        <a class="btn btn-primary btn-lg btn-block accord1"  href="#maths" role="button">Chemistry</a>
+                        <a class="btn btn-primary btn-lg btn-block accord1"  href="#maths" role="button">Biology</a>
+                        <a class="btn btn-primary btn-lg btn-block accord1"  href="#maths" role="button">Physics</a>
+                        <a class="btn btn-primary btn-lg btn-block accord1"  href="#maths" role="button">Law</a>
+                        <a class="btn btn-primary btn-lg btn-block accord1"  href="#maths" role="button">IT</a>
+                        <a class="btn btn-primary btn-lg btn-block accord1"  href="#maths" role="button">Uzbek</a>
+                        <a class="btn btn-primary btn-lg btn-block accord1"  href="#maths" role="button">Russian</a>
+                        <a class="btn btn-primary btn-lg btn-block accord1"  href="#maths" role="button">Native Language &#40;RUG&#41;</a>
+                        <a class="btn btn-primary btn-lg btn-block accord1"  href="#maths" role="button">Native Language &#40;UZG&#41;</a>
+                        <a class="btn btn-primary btn-lg btn-block accord1"  href="#maths" role="button">Literature</a>
+                        <a class="btn btn-primary btn-lg btn-block accord1"  href="#maths" role="button">НДП</a>
+                        <a class="btn btn-primary btn-lg btn-block accord1"  href="#maths" role="button">Religion</a>
+                        <a class="btn btn-primary btn-lg btn-block accord1"  href="#maths" role="button">Aesthetics</a>
                     </div>
-                    <a class="btn btn-primary btn-lg btn-block" id="accord1" href="#english" role="button">English</a>
-                    <a class="btn btn-primary btn-lg btn-block" id="accord1" href="#maths" role="button">Algebra</a>
-                    <a class="btn btn-primary btn-lg btn-block" id="accord1" href="#maths" role="button">Geometry</a>
-                    <a class="btn btn-primary btn-lg btn-block" id="accord1" href="#maths" role="button">Chemistry</a>
-                    <a class="btn btn-primary btn-lg btn-block" id="accord1" href="#maths" role="button">Biology</a>
-                    <a class="btn btn-primary btn-lg btn-block" id="accord1" href="#maths" role="button">Physics</a>
-                    <a class="btn btn-primary btn-lg btn-block" id="accord1" href="#maths" role="button">Law</a>
-                    <a class="btn btn-primary btn-lg btn-block" id="accord1" href="#maths" role="button">IT</a>
-                    <a class="btn btn-primary btn-lg btn-block" id="accord1" href="#maths" role="button">Uzbek</a>
-                    <a class="btn btn-primary btn-lg btn-block" id="accord1" href="#maths" role="button">Russian</a>
-                    <a class="btn btn-primary btn-lg btn-block" id="accord1" href="#maths" role="button">Native Language &#40;RUG&#41;</a>
-                    <a class="btn btn-primary btn-lg btn-block" id="accord1" href="#maths" role="button">Native Language &#40;UZG&#41;</a>
-                    <a class="btn btn-primary btn-lg btn-block" id="accord1" href="#maths" role="button">Literature</a>
-                    <a class="btn btn-primary btn-lg btn-block" id="accord1" href="#maths" role="button">НДП</a>
-                    <a class="btn btn-primary btn-lg btn-block" id="accord1" href="#maths" role="button">Religion</a>
-                    <a class="btn btn-primary btn-lg btn-block" id="accord1" href="#maths" role="button">Aesthetics</a>
-                </div>
 
 
-                <div>
-                    <a class="btn btn-primary btn-lg btn-block accord" id="accord1" data-toggle="collapse" href="#levelsecond" role="button" aria-expanded="true">Level 2</a>
-                </div>
-                <div class="collapse buttoncol" id="levelsecond">
-                    <a class="btn btn-primary btn-lg btn-block" id="accord1" href="#history" role="button">History</a>
-                    <a class="btn btn-primary btn-lg btn-block" id="accord1" href="#english" role="button">English</a>
-                    <a class="btn btn-primary btn-lg btn-block" id="accord1" href="#maths" role="button">Algebra</a>
-                    <a class="btn btn-primary btn-lg btn-block" id="accord1" href="#maths" role="button">Geometry</a>
-                    <a class="btn btn-primary btn-lg btn-block" id="accord1" href="#maths" role="button">Chemistry</a>
-                    <a class="btn btn-primary btn-lg btn-block" id="accord1" href="#maths" role="button">Biology</a>
-                    <a class="btn btn-primary btn-lg btn-block" id="accord1" href="#maths" role="button">Physics</a>
-                    <a class="btn btn-primary btn-lg btn-block" id="accord1" href="#maths" role="button">Law</a>
-                    <a class="btn btn-primary btn-lg btn-block" id="accord1" href="#maths" role="button">IT</a>
-                    <a class="btn btn-primary btn-lg btn-block" id="accord1" href="#maths" role="button">Uzbek</a>
-                    <a class="btn btn-primary btn-lg btn-block" id="accord1" href="#maths" role="button">Russian</a>
-                    <a class="btn btn-primary btn-lg btn-block" id="accord1" href="#maths" role="button">Native Language &#40;RUG&#41;</a>
-                    <a class="btn btn-primary btn-lg btn-block" id="accord1" href="#maths" role="button">Native Language &#40;UZG&#41;</a>
-                    <a class="btn btn-primary btn-lg btn-block" id="accord1" href="#maths" role="button">Literature</a>
-                    <a class="btn btn-primary btn-lg btn-block" id="accord1" href="#maths" role="button">НДП</a>
-                    <a class="btn btn-primary btn-lg btn-block" id="accord1" href="#maths" role="button">Religion</a>
-                    <a class="btn btn-primary btn-lg btn-block" id="accord1" href="#maths" role="button">Aesthetics</a>
-                </div>
-                <div>
-                    <a class="btn btn-primary btn-lg btn-block accord" id="accord1" data-toggle="collapse" href="#levelthird" role="button" aria-expanded="true">Level 3</a>
-                </div>
-                <div class="collapse buttoncol" id="levelthird">
-                    <a class="btn btn-primary btn-lg btn-block" id="accord1" href="#english" role="button">English</a>
-                    <a class="btn btn-primary btn-lg btn-block" id="accord1" href="#maths" role="button">Algebra</a>
-                    <a class="btn btn-primary btn-lg btn-block" id="accord1" href="#maths" role="button">Geometry</a>
-                    <a class="btn btn-primary btn-lg btn-block" id="accord1" href="#maths" role="button">IT</a>
-                    <a class="btn btn-primary btn-lg btn-block" id="accord1" href="#maths" role="button">Uzbek</a>
-                    <a class="btn btn-primary btn-lg btn-block" id="accord1" href="#maths" role="button">Russian</a>
-                    <a class="btn btn-primary btn-lg btn-block" id="accord1" href="#maths" role="button">Native Language &#40;RUG&#41;</a>
-                    <a class="btn btn-primary btn-lg btn-block" id="accord1" href="#maths" role="button">Native Language &#40;UZG&#41;</a>
-                    <a class="btn btn-primary btn-lg btn-block" id="accord1" href="#maths" role="button">Literature</a>
-                </div>
+                    <div class="collapse in buttoncol fade tab-pane" id="levelsecond">
+                        <a class="btn btn-primary btn-lg btn-block accord1"  href="#maths" role="button">Native Language &#40;RUG&#41;</a>
+                        <a class="btn btn-primary btn-lg btn-block accord1"  href="#maths" role="button">Native Language &#40;UZG&#41;</a>
+                        <a class="btn btn-primary btn-lg btn-block accord1"  href="#maths" role="button">Literature</a>
+                        <a class="btn btn-primary btn-lg btn-block accord1"  href="#maths" role="button">НДП</a>
+                        <a class="btn btn-primary btn-lg btn-block accord1"  href="#maths" role="button">Religion</a>
+                        <a class="btn btn-primary btn-lg btn-block accord1"  href="#maths" role="button">Aesthetics</a>
+                    </div>
+
+                    <div class="collapse in buttoncol fade tab-pane" id="levelthird">
+                        <a class="btn btn-primary btn-lg btn-block accord1"  href="#maths" role="button">Native Language &#40;RUG&#41;</a>
+                        <a class="btn btn-primary btn-lg btn-block accord1"  href="#maths" role="button">Native Language &#40;UZG&#41;</a>
+                        <a class="btn btn-primary btn-lg btn-block accord1"  href="#maths" role="button">Literature</a>
+                        <a class="btn btn-primary btn-lg btn-block accord1"  href="#maths" role="button">НДП</a>
+                        <a class="btn btn-primary btn-lg btn-block accord1"  href="#maths" role="button">Religion</a>
+                        <a class="btn btn-primary btn-lg btn-block accord1"  href="#maths" role="button">Aesthetics</a>
+                    </div>
             </div>
-        </section> 
+
+        </div>
+    </section>
     <!-- foooter -->
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
@@ -202,6 +217,7 @@
     <!-- Core JS file -->
 
     <script src="css/edu.js"></script>
+    <script src="css/like.js"> </script>
 
     <script src="css/photoswipe.min.js"></script>
 
