Changes to HWbySubject Began Resources subsection implementation

--- a/src/main/webapp/edu_resources.html
+++ b/src/main/webapp/edu_resources.html
@@ -113,7 +113,7 @@
                           <ul class="dropdown-menu nav nav-tabs">
                             <li class="active"><a  data-toggle="tab" href="#levelfirst">Level 1</a></li>
                             <li class=""><a data-toggle="tab" href="#levelsecond">Level 2</a></li>
-                            <li class=""><a data-toggle="tab" href="#">Level 3</a></li>
+                            <li class=""><a data-toggle="tab" href="#levelthird">Level 3</a></li>
                           </ul>
 
                     </div>
