Resources almost final visualization - some minor problems with downloading older resources. Problem with files being uploaded simultaneously - might reveal itself when downloading older hw.

--- a/src/main/webapp/add-homework.html
+++ b/src/main/webapp/add-homework.html
@@ -236,12 +236,12 @@
 </div>
 
  
-    <script src="css/jquery.min.js"></script>
+    <script src="js/jquery.min.js"></script>
 
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="css/bootstrap.min.js" type="text/javascript"></script>
+    <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <!-- <script src="slick/slick.min.js"></script>    -->
-    <script src="css/main.js" type="text/javascript"></script>
+    <script src="js/main.js" type="text/javascript"></script>
     <script>
 function setbg(color)
      {
@@ -297,6 +297,6 @@ function setbg(color)
 //     }
 // });
     </script>
-    <script src="css/add-homework.js"></script>
+    <script src="js/add-homework.js"></script>
 </body>
 </html>
