--- a/src/main/webapp/album_post_photos.html
+++ b/src/main/webapp/album_post_photos.html
@@ -216,18 +216,18 @@
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="css/jquery.min.js"></script>
-    <script src="css/swiper.min.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/swiper.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="css/bootstrap.min.js" type="text/javascript"></script>
+    <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <!-- <script src="slick/slick.min.js"></script>    -->
-    <script src="css/main.js" type="text/javascript"></script>
+    <script src="js/main.js" type="text/javascript"></script>
 
      <!-- Core JS file -->
-    <script src="css/photoswipe.min.js"></script>
+    <script src="js/photoswipe.min.js"></script>
 
     <!-- UI JS file -->
-    <script src="css/photoswipe-ui-default.min.js"></script>
+    <script src="js/photoswipe-ui-default.min.js"></script>
 </body>
 
 </html>
