--- a/src/main/webapp/events.html
+++ b/src/main/webapp/events.html
@@ -240,10 +240,10 @@
           </div>
     </section>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="css/jquery.min.js"></script>
+    <script src="js/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="css/bootstrap.min.js" type="text/javascript"></script>
+    <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <!-- <script src="slick/slick.min.js"></script>    -->
-    <script src="css/main.js" type="text/javascript"></script>
+    <script src="js/main.js" type="text/javascript"></script>
     <!--<a href="https://ru.freepik.com/free-vector/_801555.htm">Разработано через Freepik</a>-->
 </body>
