--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -653,19 +653,19 @@ To apply, visit our website at <a href="https://alwiutmun.weebly.com">https://al
     </section>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="css/jquery.min.js"></script>
-    <script src="css/swiper.min.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/swiper.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="css/bootstrap.min.js" type="text/javascript"></script>
+    <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <!-- <script src="slick/slick.min.js"></script>    -->
-    <script src="css/main.js" type="text/javascript"></script>
+    <script src="js/main.js" type="text/javascript"></script>
 
     <!-- Core JS file -->
-    <script src="css/photoswipe.min.js"></script>
+    <script src="js/photoswipe.min.js"></script>
 
     <!-- UI JS file -->
-    <script src="css/photoswipe-ui-default.min.js"></script>
-    <script src="css/like.js"></script>
+    <script src="js/photoswipe-ui-default.min.js"></script>
+    <script src="js/like.js"></script>
 </body>
 
 </html>
