--- a/src/main/webapp/signin.html
+++ b/src/main/webapp/signin.html
@@ -205,11 +205,11 @@ div.checkbox{
       </div>
 
 
-    <script src="css/jquery.min.js"></script> 
+    <script src="js/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="css/bootstrap.min.js" type="text/javascript"></script>
+    <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <!-- <script src="slick/slick.min.js"></script>    -->
-    <script src="css/main.js" type="text/javascript"></script>
+    <script src="js/main.js" type="text/javascript"></script>
 </body>
 </html>
 
