Added BCrypt support Visualization of Photos Files visualization with star-favorite Signin with js

--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -194,7 +194,8 @@ div.checkbox{
         <div class="form">
           <form class="login-form" action="">
             <h1>LOG IN</h1>
-            <input class="textinput" type="text" placeholder="ID"/>
+            <h5 id="warn" style="background-color: rgb(249,215,215); padding: 5px; display: none;">Username or password is incorrect. Please try again.</h5>
+            <input id="login" class="textinput" type="text" placeholder="ID" />
             <input class="textinput" type="password" placeholder="password" id="marg10" />
               <div class="checkbox text-left">
                   <label><input type="checkbox">Remember me</label>
